--- a/videoPlayPage/css/main.css
+++ b/videoPlayPage/css/main.css
@@ -36,26 +36,51 @@
 	margin:20px 20px 15px 20px;
 }
 .videoPlay .videoPlayCenter .recommendDiv .prev{
-	background-color: rgba(239,234,234,0.5);
 	width: 340px;
 	height: 50px;
 	margin: 0 auto;
+	background: url(../image/toPrev.png) no-repeat center center;
+	background-color: rgba(239,234,234,0.3);
+	border-radius: 30px;
+}
+.videoPlay .videoPlayCenter .recommendDiv .prev:hover,.videoPlay .videoPlayCenter .recommendDiv .next:hover{
+	background-color: rgba(239,234,234,0.5);
+
+}
+.videoPlay .videoPlayCenter .recommendDiv .next{
+	width: 340px;
+	height: 50px;
+	margin: 0 auto;
+	background: url(../image/toNext.png) no-repeat center center;
+	background-color: rgba(239,234,234,0.3);
+	border-radius: 30px;
 }
 .videoPlay .videoPlayCenter .recommendDiv .prev img{
 	
 }
 .videoPlay .videoPlayCenter .recommendDiv .commendContent{
-	margin: 30px;
-	margin-top: 10px;
+	margin: 10px auto;
 }
 .videoPlay .videoPlayCenter .recommendDiv .commendContent li{
-	width: 80%;
-	height: 100px;
+	width: 345px;
+	height: 120px;
 	background: red;
-	margin-bottom: 10px;
+	margin:16px auto;
 }
 
 /*评论*/
+.userSelf>div{
+	width: 78px;
+	height: 78px;
+	line-height: 78px;
+	float: left;
+}
+.loginDiv,.registerDiv{
+	display: inline-block;
+	width: 30px;
+	height: 100%;
+	cursor: pointer;
+}
 .commentHotPlay{
 	width: 100%;
 }
@@ -72,10 +97,13 @@
 	box-sizing: border-box;
 	box-shadow: 5px 0px 5px #D5DDF0;
 	background: rgba(222,222,222,0.1);
+	position: relative;
+	padding-bottom: 100px;
 }
 .commentArea{
 	width: 100%;
 	height: 184px;
+	border-bottom: 1px solid #ccc;
 }
 .userSelf{
 	position: relative;
@@ -137,7 +165,7 @@
 	float: left;
 }
 .commentPer{
-	border-top: 1px solid #ededed;
+	border-bottom: 1px solid #ccc;
 	overflow: hidden;
 }
 .commentPer .userMes{
@@ -159,7 +187,7 @@
 }
 .commentPer .userMes .userAbout i{
 	font-style: normal;
-	color: #898787;
+	color: #000;
 }
 .commentPer .userMes .userBlock .operateDiv{
 	margin-top: 5px;
@@ -177,7 +205,7 @@
 .operateDiv span{
 	display: inline-block;
 	float: left;
-	color: #000;
+	color: #898787;
 }
 .operate .del{
 	margin-right: 20px;
@@ -211,6 +239,7 @@
 }
 .childComment{
 	margin-top: 10px;
+	border-bottom: 1px solid #fff;
 }
 .childText{
 	width: 610px;
@@ -256,7 +285,7 @@
 }
 
 .replyDiv .replyOther span{
-	color: #000;
+	color: #898787;
 }
 .commentInput:focus{
 	border: 1px solid #C4A4D6;
